--- a/index.html
+++ b/index.html
@@ -68,20 +68,20 @@
         <p class="lead text-muted">Descubre un mundo de compras desde la comodidad de tu hogar en nuestro centro comercial virtual. </br></br><b>Selecciona la Categoría</b></p>
         <div class="centrado"></div>
         <p>
-          <a href="https://wa.me/+573142929037" class="btn btn-primary my-2">Vestuario</a>
-          <a href="https://wa.me/+573142929037" class="btn btn-primary my-2">Comidas</a>
-          <a href="https://wa.me/+573142929037" class="btn btn-primary my-2">Talleres</a>
-          <a href="https://wa.me/+573142929037" class="btn btn-primary my-2">Ferreterias</a>
-          <a href="https://wa.me/+573142929037" class="btn btn-primary my-2">Droguerías</a>
-          <a href="https://wa.me/+573142929037" class="btn btn-primary my-2">Licores</a>
-          <a href="https://wa.me/+573142929037" class="btn btn-primary my-2">Belleza</a>
-          <a href="https://wa.me/+573142929037" class="btn btn-primary my-2">Tiendas de Tecnología</a>
-          <a href="https://wa.me/+573142929037" class="btn btn-primary my-2">Transporte</a>
-          <a href="https://wa.me/+573142929037" class="btn btn-primary my-2">Inmobiliarias</a>
-          <a href="https://wa.me/+573142929037" class="btn btn-primary my-2">Whatsapp</a>
-          <a href="https://wa.me/+573142929037" class="btn btn-primary my-2">Whatsapp</a>
-          <a href="https://m.facebook.com/urbanoestil" class="btn btn-secondary my-2">Facebook</a>
-          <a href="../comerciobarranca/Nequi.html" class="btn btn-three my-2">Pago Digital</a>
+          <a href="https://web.facebook.com/zonaurbanaba" class="btn btn-primary my-2">Vestuario</a>
+          <a href="https://web.facebook.com/maxburger.bca/" class="btn btn-secondary my-2">Comidas</a>
+          <a href="https://web.facebook.com/profile.php?id=100063836964441" class="btn btn-three my-2">Talleres</a>
+          <a href="https://web.facebook.com/Ferreteriala20Barrancabermeja" class="btn btn-primary my-2">Ferreterias</a>
+          <a href="https://web.facebook.com/drogueriaslaeconomiaParqueInfantil/" class="btn btn-secondary my-2">Droguerías</a>
+          <a href="https://web.facebook.com/elpuertolicores" class="btn btn-three my-2">Licores</a>
+          <a href="https://web.facebook.com/UrbanoEstil" class="btn btn-primary my-2">Belleza</a>
+          <a href="https://web.facebook.com/Tecnologia.solucioness" class="btn btn-secondary my-2">Tiendas de Tecnología</a>
+          <a href="https://web.facebook.com/heberth.garcia.94" class="btn btn-three my-2">Transporte</a>
+          <a href="https://web.facebook.com/inmobiliariabarrancabermeja.inmobiliaria" class="btn btn-primary my-2">Inmobiliarias</a>
+          <a href="https://web.facebook.com/ClubDeportivoRiverPlateBarrancabermeja/" class="btn btn-secondary my-2">Deportivos</a>
+          <a href="https://web.facebook.com/pokerclubbarrancabermeja/" class="btn btn-three my-2">Entretenimiento</a>
+          <a href="https://m.facebook.com/urbanoestil" class="btn btn-primary my-2">Belleza</a>
+          <a href="https://web.facebook.com/arq.motta.39" class="btn btn-secondary my-2">Construcción</a>
         </p>
       </div>
     </div>
