update pages categories

--- a/index.html
+++ b/index.html
@@ -68,8 +68,8 @@
         <p class="lead text-muted">Descubre un mundo de compras desde la comodidad de tu hogar en nuestro centro comercial virtual. </br></br><b>Selecciona la Categoría</b></p>
         <div class="centrado"></div>
         <p>
-          <a href="https://web.facebook.com/zonaurbanaba" class="btn btn-primary my-2">Vestuario</a>
-          <a href="https://web.facebook.com/maxburger.bca/" class="btn btn-secondary my-2">Comidas</a>
+          <a href="../comerciobarranca/vestuario.html" class="btn btn-primary my-2">Vestuario</a>
+          <a href="../comerciobarranca/comida.html" class="btn btn-secondary my-2">Comidas</a>
           <a href="https://web.facebook.com/profile.php?id=100063836964441" class="btn btn-three my-2">Talleres</a>
           <a href="https://web.facebook.com/Ferreteriala20Barrancabermeja" class="btn btn-primary my-2">Ferreterias</a>
           <a href="https://web.facebook.com/drogueriaslaeconomiaParqueInfantil/" class="btn btn-secondary my-2">Droguerías</a>
