--- a/index.html
+++ b/index.html
@@ -70,17 +70,24 @@
         <p>
           <a href="../comerciobarranca/vestuario.html" class="btn btn-primary my-2">Vestuario</a>
           <a href="../comerciobarranca/comida.html" class="btn btn-secondary my-2">Comidas</a>
-          <a href="https://web.facebook.com/profile.php?id=100063836964441" class="btn btn-three my-2">Talleres</a>
+          <a class="btn btn-three" data-bs-toggle="collapse" href="#collapseExample" role="button" aria-expanded="false" aria-controls="collapseExample">Mecánica</a>
+      <div class="collapse" id="collapseExample">
+        <div class="card card-body">
+          <a href="../comerciobarranca/m-motos.html" class="btn btn-three my-2">Motos</a>
+          <a href="../comerciobarranca/m-carros.html" class="btn btn-primary my-2">Carros</a>
+          <a href="../comerciobarranca/m-camiones.html" class="btn btn-secondary my-2">Camiones</a>
+        </div>
+      </div>
           <a href="https://web.facebook.com/Ferreteriala20Barrancabermeja" class="btn btn-primary my-2">Ferreterias</a>
           <a href="https://web.facebook.com/drogueriaslaeconomiaParqueInfantil/" class="btn btn-secondary my-2">Droguerías</a>
           <a href="https://web.facebook.com/elpuertolicores" class="btn btn-three my-2">Licores</a>
-          <a href="https://web.facebook.com/UrbanoEstil" class="btn btn-primary my-2">Belleza</a>
+          <a href="https://web.facebook.com/UrbanoEstil" class="btn btn-three my-2">Belleza</a>
           <a href="https://web.facebook.com/Tecnologia.solucioness" class="btn btn-secondary my-2">Tiendas de Tecnología</a>
           <a href="https://web.facebook.com/heberth.garcia.94" class="btn btn-three my-2">Transporte</a>
           <a href="https://web.facebook.com/inmobiliariabarrancabermeja.inmobiliaria" class="btn btn-primary my-2">Inmobiliarias</a>
           <a href="https://web.facebook.com/ClubDeportivoRiverPlateBarrancabermeja/" class="btn btn-secondary my-2">Deportivos</a>
           <a href="https://web.facebook.com/pokerclubbarrancabermeja/" class="btn btn-three my-2">Entretenimiento</a>
-          <a href="https://m.facebook.com/urbanoestil" class="btn btn-primary my-2">Belleza</a>
+          <a href="https://m.facebook.com/urbanoestil" class="btn btn-primary my-2">Veterinarias</a>
           <a href="https://web.facebook.com/arq.motta.39" class="btn btn-secondary my-2">Construcción</a>
         </p>
       </div>
