--- a/m-motos.html
+++ b/m-motos.html
@@ -3,7 +3,7 @@
   <head>
     <link rel="stylesheet" type="text/css" href="../comerciobarranca/css/bootstrap.css" media="screen" />
     <meta charset="utf-8">
-    <title>Centro comercial virtual | Comidas</title>
+    <title>Centro comercial virtual | Mecanica</title>
     <link rel="icon" type="image/ico" href="../comerciobarranca/images/logo.png"/>
     <meta name="viewport" content="width=device-width, initial-scale=1.0"&amp;gt>
     
@@ -50,15 +50,15 @@
   <section class="py-5 text-center container">
     <div class="row py-lg-5">
       <div class="col-lg-6 col-md-8 mx-auto">
-        <h1 class="fw-light"><b>COMIDAS</b></h1>
-        <p class="lead text-muted">Con entrega rápida y garantía de calidad, te invitamos a disfrutar de una experiencia culinaria sin igual desde la comodidad de tu hogar. ¡Explora nuestros menús y déjate llevar por el placer de comidas irresistibles al alcance de tus manos!. </br></br><b>Click para ingresar a una tienda</b></p>
-        <div class="centrado"></div>
+        <h1 class="fw-light"><b>MECANICA DE MOTOS</b></h1>
+        <div class="centrado">
+        <p class="lead text-muted"><b>Click para ingresar a un taller</b></p>
+        </div>
         <p>
-          <a href="https://web.facebook.com/maxburger.bca/" class="btn2 btn-primary my-2">Max Burger | Comida Rapida</a>
-          <a href="https://m.facebook.com/113625553692012/" class="btn2 btn-secondary my-2">Mar Azul | Restaurante</a>
-          <a href="https://m.facebook.com/Joelos.bca" class="btn2 btn-three my-2">Joelos | Heladería & Comida Rapida</a>
-          <a href="https://m.facebook.com/103509358552983/" class="btn2 btn-primary my-2">Buena Vida | Comida Rapida & Refrescos</a>
-          <a href="https://m.facebook.com/heladeriala60" class="btn2 btn-secondary my-2">La 60 | Heladería & Comida Rapida</a>
+          <a data-toggle href="https://m.facebook.com/103686325154236/" class="Eventbtn btn2 btn-secondary my-2">Mundo Repuestos | Almacén & Taller</a>
+          <a href="https://m.facebook.com/talleryrepuestosgdmotos" class="Eventbtn btn2 btn-primary my-2">GD Motos | Almacén & Taller</a>
+          <a href="https://m.facebook.com/profile.php?id=100076984051528" class="Eventbtn btn2 btn-three my-2">Full Motos | Taller</a>
+          <a href="https://m.facebook.com/profile.php?id=100063836964441" class="Eventbtn btn2 btn-secondary my-2">García Motos | Almacén & Taller</a>
         </p>
       </div>
     </div>
