--- a/vestuario.html
+++ b/vestuario.html
@@ -51,11 +51,11 @@
     <div class="row py-lg-5">
       <div class="col-lg-6 col-md-8 mx-auto">
         <h1 class="fw-light"><b>VESTUARIO</b></h1>
-        <p class="lead text-muted">¡Actualiza tu estilo y camina con confianza! Descubre nuestra exclusiva selección de ropa y calzado en línea, encontrarás todo lo que necesitas para lucir impecable en cualquier ocasión. ¡Visita nuestras tiendas online y déjate inspirar por las últimas tendencias de moda!. </br></br><b>Clic para ingresar a una tienda</b></p>
+        <p class="lead text-muted">¡Actualiza tu estilo y camina con confianza! Descubre nuestra exclusiva selección de ropa y calzado en línea, encontrarás todo lo que necesitas para lucir impecable en cualquier ocasión. ¡Visita nuestras tiendas online y déjate inspirar por las últimas tendencias de moda!. </br></br><b>Click para ingresar a una tienda</b></p>
         <div class="centrado"></div>
         <p>
           <a href="https://m.facebook.com/zonaurbanaba" class="btn2 btn-primary my-2">Zona Urbana | Ropa & Calzado</a>
-          <a href="https://m.facebook.com/estacion.cdos.5" class="btn2 btn-secondary my-2">Estación Cdos | Ropa</a>
+          <a href="https://m.facebook.com/estacion.cdos.5" class="btn2 btn-secondary my-2">Estación Cdos | Ropa & Calzado</a>
           <a href="https://m.facebook.com/davis.storee.9" class="btn2 btn-three my-2">Davis Store | Calzado</a>
           <a href="https://m.facebook.com/profile.php?id=100085609487289" class="btn2 btn-primary my-2">52.7 | Ropa</a>
           <a href="https://m.facebook.com/100427458977954/" class="btn2 btn-secondary my-2">Camisetas Barrancabermeja | Ropa</a>
