update imges in buttons

--- a/vestuario.html
+++ b/vestuario.html
@@ -54,11 +54,49 @@
         <p class="lead text-muted">¡Actualiza tu estilo y camina con confianza! Descubre nuestra exclusiva selección de ropa y calzado en línea, encontrarás todo lo que necesitas para lucir impecable en cualquier ocasión. ¡Visita nuestras tiendas online y déjate inspirar por las últimas tendencias de moda!. </br></br><b>Click para ingresar a una tienda</b></p>
         <div class="centrado"></div>
         <p>
-          <a href="https://m.facebook.com/zonaurbanaba" class="btn2 btn-primary my-2">Zona Urbana | Ropa & Calzado</a>
-          <a href="https://m.facebook.com/estacion.cdos.5" class="btn2 btn-secondary my-2">Estación Cdos | Ropa & Calzado</a>
-          <a href="https://m.facebook.com/davis.storee.9" class="btn2 btn-three my-2">Davis Store | Calzado</a>
-          <a href="https://m.facebook.com/profile.php?id=100085609487289" class="btn2 btn-primary my-2">52.7 | Ropa</a>
-          <a href="https://m.facebook.com/100427458977954/" class="btn2 btn-secondary my-2">Camisetas Barrancabermeja | Ropa</a>
+          <a class="btn2 btn-primary" data-bs-toggle="collapse" href="#collapseUrbano" role="button" aria-expanded="false" aria-controls="collapseUrbano">Zona Urbana | Ropa & Calzado</a>
+      <div class="collapse" id="collapseUrbano">
+        <div class="card card-body">
+          <a href="https://m.facebook.com/zonaurbanaba">
+          <img class="btn2" src="../comerciobarranca/images/zu.jpg" width="100%" height="100%" title="Click"/></a>
+        </div>
+      </div>
+      <div class="centrado"></div>
+        <p>
+          <a class="btn2 btn-secondary" data-bs-toggle="collapse" href="#collapseEstacion" role="button" aria-expanded="false" aria-controls="collapseEstacion">Estación Cdos | Ropa - Calzado & Accesorios</a>
+      <div class="collapse" id="collapseEstacion">
+        <div class="card card-body">
+          <a href="https://m.facebook.com/estacion.cdos.5">
+          <img class="btn2" src="../comerciobarranca/images/e52.jpg" width="100%" height="100%" title="Click"/></a>
+        </div>
+      </div>
+      <div class="centrado"></div>
+        <p>
+          <a class="btn2 btn-three" data-bs-toggle="collapse" href="#collapseDavis" role="button" aria-expanded="false" aria-controls="collapseDavis">Davis Store | Calzado</a>
+      <div class="collapse" id="collapseDavis">
+        <div class="card card-body">
+          <a href="https://m.facebook.com/davis.storee.9">
+          <img class="btn2" src="../comerciobarranca/images/ds.jpg" width="100%" height="100%" title="Click"/></a>
+        </div>
+      </div>
+      <div class="centrado"></div>
+        <p>
+          <a class="btn2 btn-primary" data-bs-toggle="collapse" href="#collapse52" role="button" aria-expanded="false" aria-controls="collapse52">52.7 | Ropa</a>
+      <div class="collapse" id="collapse52">
+        <div class="card card-body">
+          <a href="https://m.facebook.com/profile.php?id=100085609487289">
+          <img class="btn2" src="../comerciobarranca/images/52.jpg" width="100%" height="100%" title="Click"/></a>
+        </div>
+      </div>
+      <div class="centrado"></div>
+        <p>
+          <a class="btn2 btn-secondary" data-bs-toggle="collapse" href="#collapsecamiseta" role="button" aria-expanded="false" aria-controls="collapsecamiseta">Camisetas Barrancabermeja | Ropa</a>
+      <div class="collapse" id="collapsecamiseta">
+        <div class="card card-body">
+          <a href="https://m.facebook.com/100427458977954/">
+          <img class="btn2" src="../comerciobarranca/images/camiseta.jpg" width="100%" height="100%" title="Click"/></a>
+        </div>
+      </div>
         </p>
       </div>
     </div>
