--- a/comida.html
+++ b/comida.html
@@ -52,18 +52,57 @@
       <div class="col-lg-6 col-md-8 mx-auto">
         <h1 class="fw-light"><b>COMIDAS</b></h1>
         <p class="lead text-muted">Con entrega rápida y garantía de calidad, te invitamos a disfrutar de una experiencia culinaria sin igual desde la comodidad de tu hogar. ¡Explora nuestros menús y déjate llevar por el placer de comidas irresistibles al alcance de tus manos!. </br></br><b>Click para ingresar a una tienda</b></p>
-        <div class="centrado"></div>
+      <div class="centrado"></div>
         <p>
-          <a href="https://web.facebook.com/maxburger.bca/" class="btn2 btn-primary my-2">Max Burger | Comida Rapida</a>
-          <a href="https://m.facebook.com/113625553692012/" class="btn2 btn-secondary my-2">Mar Azul | Restaurante</a>
-          <a href="https://m.facebook.com/Joelos.bca" class="btn2 btn-three my-2">Joelos | Heladería & Comida Rapida</a>
-          <a href="https://m.facebook.com/103509358552983/" class="btn2 btn-primary my-2">Buena Vida | Comida Rapida & Refrescos</a>
-          <a href="https://m.facebook.com/heladeriala60" class="btn2 btn-secondary my-2">La 60 | Heladería & Comida Rapida</a>
+          <a class="btn2 btn-primary" data-bs-toggle="collapse" href="#collapsemax" role="button" aria-expanded="false" aria-controls="collapsemax">Max Burger | Comida Rápida</a>
+      <div class="collapse" id="collapsemax">
+        <div class="card card-body">
+          <a href="https://m.facebook.com/maxburger.bca">
+          <img class="btn2" src="../comerciobarranca/images/max.jpg" width="100%" height="100%" title="Click"/></a>
+        </div>
+      </div>
+      <div class="centrado"></div>
+        <p>
+          <a class="btn2 btn-secondary" data-bs-toggle="collapse" href="#collapseazul" role="button" aria-expanded="false" aria-controls="collapseazul">Mar Azul | Restaurante</a>
+      <div class="collapse" id="collapseazul">
+        <div class="card card-body">
+          <a href="https://m.facebook.com/113625553692012/">
+          <img class="btn2" src="../comerciobarranca/images/azul.jpg" width="100%" height="100%" title="Click"/></a>
+        </div>
+      </div>
+      <div class="centrado"></div>
+        <p>
+          <a class="btn2 btn-three" data-bs-toggle="collapse" href="#collapsejoelo" role="button" aria-expanded="false" aria-controls="collapsejoelo">Joelos | Heladería & Comida Rápida</a>
+      <div class="collapse" id="collapsejoelo">
+        <div class="card card-body">
+          <a href="https://m.facebook.com/Joelos.bca?paipv=0&eav=AfZ3oBDsd18IMSXP39ExxX7-v6vrC1NXz7ow-w_ykQKkSI5BqchDdMZuls4Of1KT_Qg&_rdc=1&_rdr">
+          <img class="btn2" src="../comerciobarranca/images/joelo.jpg" width="100%" height="100%" title="Click"/></a>
+        </div>
+      </div>
+      <div class="centrado"></div>
+        <p>
+          <a class="btn2 btn-primary" data-bs-toggle="collapse" href="#collapsevida" role="button" aria-expanded="false" aria-controls="collapsevida">Buena Vida | Comida Rápida & Refrescos</a>
+      <div class="collapse" id="collapsevida">
+        <div class="card card-body">
+          <a href="https://m.facebook.com/Buena-Vida-Comida-Casual-103509358552983/?paipv=0&eav=AfYtzo-LP00RGCValoC0KYDPJA6gNlkhyf583RELLdh1oMI1F1cVQGvWvepUj3_unw0">
+          <img class="btn2" src="../comerciobarranca/images/vida.jpg" width="100%" height="100%" title="Click"/></a>
+        </div>
+      </div>
+      <div class="centrado"></div>
+        <p>
+          <a class="btn2 btn-secondary" data-bs-toggle="collapse" href="#collapse60" role="button" aria-expanded="false" aria-controls="collapse60">La 60 | Heladería & Comida Rápida</a>
+      <div class="collapse" id="collapse60">
+        <div class="card card-body">
+          <a href="https://m.facebook.com/heladeriala60?paipv=0&eav=AfbkkOzjg88tx_999ATwQSut_OvU4N75NhOje9TqLHXCNAkYScDu0lrNUOJQz732GvE&_rdc=1&_rdr">
+          <img class="btn2" src="../comerciobarranca/images/60.jpg" width="100%" height="100%" title="Click"/></a>
+        </div>
+      </div>
         </p>
       </div>
     </div>
   </section>
 </main>
+
 
 <footer class="text-muted py-5">
   <div class="container">
