--- a/index.html
+++ b/index.html
@@ -78,8 +78,8 @@
           <a href="../comerciobarranca/m-camiones.html" class="btn btn-secondary my-2">Camiones</a>
         </div>
       </div>
-          <a href="https://web.facebook.com/Ferreteriala20Barrancabermeja" class="btn btn-primary my-2">Ferreterias</a>
-          <a href="https://web.facebook.com/drogueriaslaeconomiaParqueInfantil/" class="btn btn-secondary my-2">Droguerías</a>
+          <a href="../comerciobarranca/ferreteria.html" class="btn btn-primary my-2">Ferreterias</a>
+          <a href="../comerciobarranca/drogueria.html" class="btn btn-secondary my-2">Droguerías</a>
           <a href="https://web.facebook.com/elpuertolicores" class="btn btn-three my-2">Licores</a>
           <a href="https://web.facebook.com/UrbanoEstil" class="btn btn-three my-2">Belleza</a>
           <a href="https://web.facebook.com/Tecnologia.solucioness" class="btn btn-secondary my-2">Tiendas de Tecnología</a>
