--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
 <header>
   <div class="collapse bg-dark" id="navbarHeader">
     <div class="container">
-      <img src="../comerciobarranca/images/me.jpg" width="100%" height="100%" style="left: auto;"/>
+      <img src="../comerciobarranca/images/slid.png" width="100%" height="150"/>
       <div class="row">
         <div class="col-sm-8 col-md-7 py-4">
           <h4 class="text-white">Visita nuestros almacenes desde la comodidad de tu hogar</h4>
@@ -48,7 +48,6 @@
   <div class="navbar navbar-dark bg-dark shadow-sm">
     <div class="container">
       <a href="#" class="navbar-brand d-flex align-items-center">
-        <img src="../comerciobarranca/images/global.webp" width="40" height="40" fill="none" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" aria-hidden="true" class="me-2" viewBox="0 0 24 24"><path d="M23 19a2 2 0 0 1-2 2H3a2 2 0 0 1-2-2V8a2 2 0 0 1 2-2h4l2-3h6l2 3h4a2 2 0 0 1 2 2z"/><circle cx="12" cy="13" r="4"/></img>
         <strong>Barrancabermeja</strong>
       </a>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarHeader" aria-controls="navbarHeader" aria-expanded="false" aria-label="Toggle navigation">
@@ -62,6 +61,7 @@
 
   <section class="py-5 text-center container">
     <div class="row py-lg-5">
+      <div><img src="../comerciobarranca/images/descuento50.jpg" width="100%" height="80%"/></div>
       <div class="col-lg-6 col-md-8 mx-auto">
         <img src="../comerciobarranca/images/slide1.png" width="100%" height="150"/>
         <h1 class="fw-light"><b>COMERCIO ONLINE EN TU CIUDAD</b></h1>
@@ -82,7 +82,8 @@
           <a href="../comerciobarranca/drogueria.html" class="btn btn-secondary my-2">Droguerías</a>
           <a href="https://web.facebook.com/elpuertolicores" class="btn btn-three my-2">Licores</a>
           <a href="https://web.facebook.com/UrbanoEstil" class="btn btn-three my-2">Belleza</a>
-          <a href="https://web.facebook.com/Tecnologia.solucioness" class="btn btn-secondary my-2">Tiendas de Tecnología</a>
+          <a href="https://web.facebook.com/Tecnologia.solucioness" class="btn btn-secondary my-2">Tecnología</a>
+          <div><img src="../comerciobarranca/images/descuento30.jpg" width="100%" height="100%"/></div>
           <a href="https://web.facebook.com/heberth.garcia.94" class="btn btn-three my-2">Transporte</a>
           <a href="https://web.facebook.com/inmobiliariabarrancabermeja.inmobiliaria" class="btn btn-primary my-2">Inmobiliarias</a>
           <a href="https://web.facebook.com/ClubDeportivoRiverPlateBarrancabermeja/" class="btn btn-secondary my-2">Deportivos</a>
