--- a/vestuario.html
+++ b/vestuario.html
@@ -58,7 +58,7 @@
       <div class="collapse" id="collapseUrbano">
         <div class="card card-body">
           <a href="https://m.facebook.com/zonaurbanaba">
-          <img class="btn2" src="../comerciobarranca/images/zu.jpg" width="100%" height="100%" title="Click"/></a>
+          <img class="btn2" src="../comerciobarranca/images/zu.png" width="100%" height="100%" title="Click"/></a>
         </div>
       </div>
       <div class="centrado"></div>
@@ -67,7 +67,7 @@
       <div class="collapse" id="collapseEstacion">
         <div class="card card-body">
           <a href="https://m.facebook.com/estacion.cdos.5">
-          <img class="btn2" src="../comerciobarranca/images/e52.jpg" width="100%" height="100%" title="Click"/></a>
+          <img class="btn2" src="../comerciobarranca/images/e52.png" width="100%" height="100%" title="Click"/></a>
         </div>
       </div>
       <div class="centrado"></div>
